Рефакторинг xml-парсера. Мелкие правки